<resources>
    <string name="app_name">Urban Guide</string>"
    <string name="logo_name">Get A Way</string>
    <string name="powered_by">Powered by UrbanLife,Ltd</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <!-- Strings for on Boarding Screen -->
    <!-- Titles -->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!-- Descriptions -->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search.</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform by UrbanGuide</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by UrbanGuide</string>
    <string name="fourth_slide_desc">We will handle everything for you.As you have the app in your pocket then you don\'t have to worry about anything</string>

    <!--Button-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <string name="backgroundimage">backgroundImage</string>
    <string name="user_dashboard">User_Dashboard</string>

    <!-- Dashboard -->
    <!-- Categories -->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!-- Titles and Descriptions -->
    <string name="featured_location">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search…</string>
    <string name="mcdonald_s">McDonald\'s</string>

    <!-- General Strings -->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create Account</string>
    <string name="how_we_work">How we work?</string>
    <string name="login">LOGIN</string>
    <string name="signup">SignUp</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_next">Forget\nPassword</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="enter_full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age</string>

    <!-- OTP Screen -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on</string>
    <string name="otp_phonenumber_text">%s</string>
    <string name="verify_code">Verify Code</string>
    <string name="via_sms">via sms:</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_details">Your identity has been verified \nSet your new password</string>

    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="password_nupdated">Password \nUpdated</string>
    <string name="password_updated_success">Your password has beeen updated!</string>
    <string name="forget_password_detail">provide your email for which you want to reset your password</string>
    <string name="make_nselection">Make\nSelection</string>
    <string name="make_selection_detail">Selection which contact detail should we use to reset your password?</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="all_categories">All Categories</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="education">Education</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="expand_all">Expand All</string>

</resources>